Many more fixes and cleanup, 46 left